<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="caclulator">Calculator</string>
    <string name="brows">Web-Browser</string>
    <string name="music">Music</string>
    <string name="soon">Coming soon..</string>
    <string name="camera">Camera</string>
    <string name="record">Record</string>
    <string name="preference">Preferences</string>
    <string name="add">Add History</string>
    <string name="history">History</string>
    <string name="name_history">Title</string>
    <string name="text_history">Text</string>

    <string name="map">Map</string>
    <string name="pick_place">Pic place</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_camera_">Camera_</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_recorder">Recorder</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>